--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,11 @@ Flask==2.0.2
 Flask-Login==0.5.0
 Flask-SQLAlchemy==2.5.1
 greenlet==1.1.2
+gunicorn==20.1.0
 itsdangerous==2.0.1
 Jinja2==3.0.2
 MarkupSafe==2.0.1
+psycopg2==2.9.1
+python-decouple==3.5
 SQLAlchemy==1.4.25
 Werkzeug==2.0.2
